Version :
	Bug fixes:
	- Fix movement of cursor after inserting a tab.
	- Fix movement of cursor on pressing left or right when text is selected.

Version 0.4.4:
	Bug fixes:
	- Remove superfluous / characters from directory names in the file dialog,
	  which prevented .. from working correctly.
	- Fix incorrect value types in return statements in widget_group::is_hotkey.
	- Correctly set the time member in the SelectionNotify events sent for
	  X11 clipboard conversions. This fixes hangs when pasting in other clients.

Version 0.4.3:
	Bug fixes:
	- Don't erase the last line of wrapped text in the edit window.

Version 0.4.2:
	Bug fixes:
	- Allow scroll wheel to function on scrollbar again.
	- Do not (un)indent the bottom line of the selection if the selection starts
	  below the end and on column 0.
	- Properly reset application-keypad mode.
	- Fix several memory leaks related to popups.

Version 0.4.1:
	Bug fixes:
	- Fix a segmentation fault on pressing enter in a text field without drop
	  down list.

Version 0.4.0:
	New features:
	- Draggable menus.
	- Draggable scrollbars.

	Bug fixes:
	- Ensure correct cursor position after line unindent and undo of line
	  unindent (#16).
	- Fix report window for mouse event.
	- Check bounds on arguments to text_buffer_t::calculate_line_pos in
	  edit_window_t::xy_to_text_coordinate.

Version 0.3.0:
	New features:
	- Use libt3window's new functionality to retrieve modifiers.
	- GPM (General Purpose Mouse) support, to enable mouse on the linux console
	  (#11).
	- Implemented search panel for the file pane, such that a user can type
	  (part) of the file name to search (#9).

	Bug fixes:
	- Make single click work for list_pane_t (#3).
	- Update the edit_window_t contents on scrollbar click (#7).
	- Ungrab the mouse if there is a selection in a text-field drop-down list.
	- Hide the drop-down list on pressing enter in a text field.
	- Compile with Large File Support if such support is available on the
	  platform.
