@@ -2,6 +2,7 @@ Version :
 	Bug fixes:
 	- Fix movement of cursor after inserting a tab.
 	- Fix movement of cursor on pressing left or right when text is selected.
+	- Don't allow pasting of values with filtered characters in text fields.
 
 Version 0.4.4:
 	Bug fixes:
